<resources>
    <string name="app_name">JnkNotes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add Image</string>
    <string name="create_note">Crear</string>
    <string name="add_password">Add Password</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">Cancel</string>
</resources>