<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="16dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/layoutDeleteNote"/>

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/delete_note"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"/>

    <TextView
        android:id="@+id/textCancelNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"/>


</androidx.constraintlayout.widget.ConstraintLayout>