<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/colorDefault"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/background_note_color_default" />

            <ImageView
                android:id="@+id/imageColorDefault"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/colorYellow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/background_note_color_yellow" />

            <ImageView
                android:id="@+id/imageColorYellow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/colorPink"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/background_note_color_pink" />

            <ImageView
                android:id="@+id/imageColorPink"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/colorBlue"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/background_note_color_blue" />

            <ImageView
                android:id="@+id/imageColorBlue"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/colorBlack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/background_note_color_black" />

            <ImageView
                android:id="@+id/imageColorBlack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:includeFontPadding="false"
            android:text="@string/pick_color"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_image"
        android:drawablePadding="16dp"
        android:drawableTint="@color/colorIcons"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/add_image"
        android:textColor="@color/colorIcons"
        android:textSize="16sp" />


</LinearLayout>